# hero-edge-routing

./: .gitattributes  .gitignore  CITATION.cff  README.md  index.html
.github/workflows/: sync-to-hf-hub.yml
data/: ag_news_test.csv  boolq_validation.csv  imdb_dataset.csv  lorem_ipsum_dataset.csv  spam_ham_dataset.csv
notebooks/: 00_preprocess_datasets.ipynb  01_generate_lorem_ipsum_dataset.ipynb  02_analyse_baseline_experiments.ipynb  03_analyse_queueing_behaviour.ipynb  04_design_routing_policies.ipynb  05_analyse_HERO_performance.ipynb  README.md  pyproject.toml  utils.py
results/policy_experiments/: ag-news_lambda10_raw_experiment_Llama-3-2-1B-Instruct-ONNX_meta-llama-llama-3-2-1b-instruct_jseq_exponential-arrival_2026-02-28T14-47-48.csv  ag-news_lambda10_stats_experiment_Llama-3-2-1B-Instruct-ONNX_meta-llama-llama-3-2-1b-instruct_jseq_exponential-arrival_2026-02-28T14-47-48.csv  ag-news_lambda12_raw_experiment_Llama-3-2-1B-Instruct-ONNX_meta-llama-llama-3-2-1b-instruct_jseq_exponential-arrival_2026-02-28T14-50-50.csv  ag-news_lambda12_stats_experiment_Llama-3-2-1B-Instruct-ONNX_meta-llama-llama-3-2-1b-instruct_jseq_exponential-arrival_2026-02-28T14-50-50.csv  ag-news_lambda13_raw_experiment_Llama-3-2-1B-Instruct-ONNX_meta-llama-llama-3-2-1b-instruct_jseq_exponential-arrival_2026-02-28T14-51-59.csv  ag-news_lambda13_stats_experiment_Llama-3-2-1B-Instruct-ONNX_meta-llama-llama-3-2-1b-instruct_jseq_exponential-arrival_2026-02-28T14-51-59.csv  (+48 more)
src/: datasetLoader.js  evaluator.js  main.js  requestManager.js  scheduler.js  utils.js
src/services/: cloudService.js  (+1 more)
(+193 files in other folders)
