[project]
name = "hero-notebooks"
version = "1.0.0"
description = "A collection of Jupyter notebooks for data analysis and visualization of the HERO experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "lorem-text>=3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
